--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -35,7 +35,7 @@ jobs:
           id: rpm_build
           uses: naveenrajm7/rpmbuild@master
           with:
-              spec_file: "cello.spec"
+              spec_file: "gnome-software-plugin-snapd.spec"
 
         - name: Upload artifact
           uses: actions/upload-artifact@v1.0.0
